[package]
name = "two_phase_commit"
version = "0.1.0"
authors = ["xiaohan2013"]
license = "GPLv3"

[dependencies]
log = { version = "0.4.20", features = ["std"] }
docopt = "1.1.1"
log4rs = "1.2.0"
serde = { version = "1", features = ["derive"] }
ipc-channel = "0.18.0"
rand = "0.8.5"
uuid = "1.6.1"
byteorder = "1.0"
bytes = "1"
crc32c = "0.6"
memmap2 = "0.9"
page_size = "0.6.0"
fs4 = "0.7.0"
memmap = "0.7.0"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10.1"
rand = "0.8"
