[package]
name = "two_phase_commit"
version = "0.1.0"
authors = ["xiaohan2013"]
license = "GPLv3"
edition = "2021"

# [[bin]]
# name="server"
# path="src/rpc/server.rs"

# [[bin]]
# name="client"
# path="src/rpc/client.rs"

# [[bin]]
# name="two_phase_commit"
# path="src/main.rs"
# test=false

# [[bin]]
# name="server"
# path="v1/main.rs"
# test=false

[workspace]
members = [
    "v2/client",
    "v2/rpc",
    "v2/server",
    "v2/consistencies"
]
resolver = "2"

[dependencies]
log = { version = "0.4.20", features = ["std"] }
docopt = "1.1.1"
log4rs = "1.2.0"
serde = { version = "1", features = ["derive"] }
ipc-channel = "0.18.0"
rand = "0.8.5"
uuid = "1.6.1"
byteorder = "1.0"
bytes = "1"
crc32c = "0.6"
memmap2 = "0.9"
page_size = "0.6.0"
fs4 = "0.7.0"
memmap = "0.7.0"
protobuf = "2.28.0"
tokio = { version = "1.35.0", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.3"
feature = "0.5.1"
crossbeam-channel = "0.5.9"
ctrlc = "3.4.1"
exitfailure = "0.5.1"
futures = "0.3.29"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = "4.4.11"


[dev-dependencies]
criterion = "0.5"
env_logger = "0.10.1"
rand = "0.8"


[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3.0.0"
protoc-rust = "2.28.0"
protobuf-codegen-pure = "2"
tonic-build = "0.10.2"
